# wbtech-Quick-Rust

./: Cargo.toml  Makefile  README.md
.github/workflows/: clippy-lint.yml  unit-tests.yml
Demo/: Cargo.toml
Demo/src/: lib.rs  main.rs
Demo/tests/: tests.rs
L0/: README.md
add/src/: main.rs
add/tests/: tests.rs
l0/: .env  .http  Cargo.toml  README.md  docker-compose.yml
l0/db/migrations/: postgres_init.sql
l0/src/: main.rs
l1-6/: README.md
l1-6/src/: main.rs
l1/l1-1/: Cargo.toml  README.md
l1/l1-1/src/: main.rs
l1/l1-10/: README.md
l1/l1-10/src/: main.rs
l1/l1-11/: README.md
l1/l1-11/src/: main.rs
l1/l1-12/: README.md
l1/l1-12/src/: main.rs
l1/l1-13/: README.md
l1/l1-13/src/: main.rs
l1/l1-14/: README.md
l1/l1-14/src/: main.rs
l1/l1-15/: Cargo.toml  README.md
l1/l1-15/src/: main.rs
l1/l1-16/: README.md
l1/l1-16/src/: main.rs
l1/l1-17/: README.md
l1/l1-17/src/: main.rs
l1/l1-18/: README.md
l1/l1-18/src/: lib.rs  main.rs
l1/l1-18/tests/: test.rs
l1/l1-19/: README.md
l1/l1-19/src/: lib.rs  main.rs
l1/l1-19/tests/: test.rs
l1/l1-2/: Cargo.toml  README.md
l1/l1-20/: README.md
l1/l1-21/: Cargo.toml  README.md
l1/l1-22/: README.md
l1/l1-23/: README.md
l1/l1-24/: README.md
l1/l1-3/: README.md
l1/l1-5/: Cargo.toml  README.md
l1/l1-7/: Cargo.toml
l1/l1-9/: README.md
l2/l2-1/: Cargo.toml  README.md
l2/l2-2/: Cargo.toml  README.md
l2/l2-3/: Cargo.toml  README.md  sort-me.txt
l2/l2-4/: Cargo.toml  README.md
l2/l2-5/: Cargo.toml  README.md  poem.txt
l2/l2-6/: Cargo.toml  README.md
(+20 files in other folders)
