[package]
name = "l0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## The core APIs, including the Serialize and Deserialize traits. Always
## required when using Serde. The "derive" feature is only required when
## using #[derive(Serialize, Deserialize)] to make Serde work with structs
## and enums defined in your crate.
serde = { version = "1.0.209", features = ["derive"] }
#
## Each data format lives in its own crate; the sample code below uses JSON
## but you may be using a different one.
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
axum = "0.7.5"

#postgres
postgres = "0.19.8"
sqlx = {version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros"]}

# create a cfg stuct
dotenvy = "0.15.7"
envy = { version = "0.4"}
